syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message FutureControl {
    message PKey {
        
        string fut_ctrl_key = 10;
        string client_firm = 11;
        ExpiryKey fkey = 12;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string modified_by = 100; // user who last modified this record
    SysEnvironment modified_in = 103;
    google.protobuf.Timestamp timestamp = 106; // timestamp of last modification
}


